fixed test files for appropriate syntax and formatting