@@ -1,13 +1,10 @@
 package tests.ModelTests;
 
-import Model.*; 
+import src.Model.*; 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
@@ -29,22 +26,18 @@ public class TestBooking {
 
     @BeforeEach
     void setup() {
-        //Initialize the student who created the booking
         student = new Student("student@test.com", "password123");
 
-        //Initialize the event for the performance booked
         EntertainmentProvider ep = new EntertainmentProvider("ep@test.com", "password", 
                             "Test Entertainment Provider", "A123", "Test", "description");
-        Event event = new Event(ep, 1234, "Test Title", EventType.MUSIC, true);
+        event = new Event(ep, 1234, "Test Title", EventType.MUSIC, true);
 
-        //Initialize performance booked
         LocalDateTime performanceStartTime = LocalDateTime.of(2026, 4, 20, 16, 30);
         LocalDateTime performanceEndTime = LocalDateTime.of(2026, 4, 20, 20, 30);
-        Collection<String> performerNames = new ArrayList<>(List.of("Performer 1", "Performer 2"));
-        Performance performance = new Performance(123, performanceStartTime, performanceEndTime, performerNames, 
+        Collection<String> performerNames = new ArrayList<>(Arrays.asList("Performer 1", "Performer 2"));
+        performance = new Performance(123, performanceStartTime, performanceEndTime, performerNames, 
             "15 Test Street", 300, false, false, 50, 5.75, event);
 
-        //Initialize booking
         LocalDateTime bookingTime = LocalDateTime.of(2026, 4, 1, 16, 30);
         booking = new Booking(0, 2, 11.5, bookingTime, student, performance);
     }
@@ -55,11 +48,10 @@ public class TestBooking {
     }
 
     @AfterAll
-    void tearDownAll() {
+    static void tearDownAll() {
         System.out.println("Testing for Booking class completed");
     }
 
-    //cancelByStudent tests
     @Test
     @DisplayName("Tests to see if cancellation by student correctly alters a booking's status")
     void testCancelByStudent(){
@@ -67,7 +59,6 @@ public class TestBooking {
         assertEquals(booking.getStatus(), BookingStatus.CANCELLEDBYSTUDENT, "Expected true: Booking should be cancelled by student");
     }
     
-    //cancelPaymentFailed tests
     @Test
     @DisplayName("Tests to see if failed payment correctly invalidates a booking")
     void testCancelPaymentFailed(){
@@ -75,15 +66,13 @@ public class TestBooking {
         assertEquals(booking.getStatus(), BookingStatus.PAYMENTFAILED, "Expected true: Booking should be inactive because of invalid payment");
     }
 
-    //cancelByProvider tests
     @Test
     @DisplayName("Tests to see if cancellation by an entertainment provider correctly alters a booking's status")
     void testCancelByProvider(){
         booking.cancelByProvider();
-        assertEquals(booking.getStatus(), BookingStatus.CANCELLEDBYPROVIDER, "Expecteed true: Booking should be cancelled by provider");
+        assertEquals(booking.getStatus(), BookingStatus.CANCELLEDBYPROVIDER, "Expected true: Booking should be cancelled by provider");
     }
 
-    //checkBookedByStudent tests
     @Test
     @DisplayName("Testing correct value for checkBookedByStudent when emails match")
     void testCheckBookedByStudentMatching(){
@@ -108,7 +97,6 @@ public class TestBooking {
         assertFalse(matching, "Expected false: Student's email should not match null");
     }
 
-    //getStudentDetails tests
     @Test
     @DisplayName("Testing correct email value for getStudentDetails")
     void testStudentDetailsContainsEmail(){
@@ -120,13 +108,11 @@ public class TestBooking {
     @Test
     @DisplayName("Testing correct phone number value for getStudentDetails")
     void testStudentDetailsContainsPhoneNumber(){
-        //Sets the student's phone number as this would have been taken in when creating the booking
         booking.getStudent().setPhoneNumber(12345);
         String result = booking.getStudentDetails();
         assertTrue(result.contains("12345"), "Expected true: the student's details should contain their phone number");
     }
 
-    //generateBookingRecord tests
     @Test
     @DisplayName("Testing correct ID value for toString")
     void testCorrectID(){
@@ -137,7 +123,6 @@ public class TestBooking {
     @Test
     @DisplayName("Testing correct student name value for generateBookingRecord")
     void testCorrectStudentName(){
-        //Sets the student's phone number as this would have been taken in when creating the booking
         student.setName("Bob");
         String result = booking.generateBookingRecord();
         assertTrue(result.contains("Bob"), "Expected true: booking record should contain student's name");
@@ -153,7 +138,6 @@ public class TestBooking {
     @Test
     @DisplayName("Testing correct student phone number for generateBookingRecord")
     void testCorrectStudentPhoneNumber(){
-        //Sets the student's phone number as this would have been taken in when creating the booking
         student.setPhoneNumber(12345);
         String result = booking.generateBookingRecord();
         assertTrue(result.contains("12345"), "Expected true: booking record should contain student's phone number");
@@ -170,7 +154,6 @@ public class TestBooking {
     @DisplayName("Testing if event is correctly ticketed in generateBookingRecord")
     void testEventTicketedWhenTicketed(){
         String result = booking.generateBookingRecord();
-        //Since there should only be bookings for ticketed events, it should always contain true
         assertTrue(result.contains("true"), "Expected true: booking record should contain that event is ticketed");
     }
 
@@ -213,7 +196,6 @@ public class TestBooking {
     @Test
     @DisplayName("Testing correct sponsored status for generateBookingRecord when performance is sponsored")
     void testCorrectSponsoredStatusWhenSponsored(){
-        //Sets the performance as sponsored as this would be initialized to false
         performance.sponsor(1);
         String result = booking.generateBookingRecord();
         assertTrue(result.contains("true"), "Expected true: booking record should contain that performance is sponsored");
@@ -229,7 +211,6 @@ public class TestBooking {
     @Test
     @DisplayName("Testing correct sponsorship amount for generateBookingRecord when performance is sponsored")
     void testCorrectSponsorshipAmountWhenSponsored(){
-        //Sets the performance as sponsored as this would be initialized to false
         performance.sponsor(1);
         String sponsorshipAmt = String.valueOf(performance.getSponsoredAmount());
         String result = booking.generateBookingRecord();
@@ -246,8 +227,7 @@ public class TestBooking {
     @Test
     @DisplayName("Testing correct performance status for generateBookingRecord when performance is cancelled")
     void testCorrectPerformanceStatusWhenCancelled(){
-        //Cancels the performance as this would be initialized to active
-        performance.cancelPerformance();
+        performance.cancel();
         String result = booking.generateBookingRecord();
         assertTrue(result.contains("CANCELLED"), "Expected true: booking record should contain that performance is cancelled");
     }
