@@ -8,7 +8,7 @@ import org.junit.jupiter.api.DisplayName;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.*;
 
 public class TestPerformance {
 
@@ -17,15 +17,12 @@ public class TestPerformance {
     private Event ticketedEvent;
     
     @BeforeEach
-    // creating a new EP, ticketed Event and performance before each test
     void setup(){
         ep = new EntertainmentProvider("ep@test.com", "password", "Test Entertainment Provider", "A123", "Test", "description");
         ticketedEvent = new Event(ep, 1234, "Test Title", EventType.MUSIC, true);
-        performance = new Performance(123, LocalDateTime.of(2026, 4, 20, 16, 30),LocalDateTime.of(2026, 4, 20, 20, 30), List.of("performer Names"),"12 adress", 100, false, false, 100, 50.00, ticketedEvent);
+        performance = new Performance(123, LocalDateTime.of(2026, 4, 20, 16, 30), LocalDateTime.of(2026, 4, 20, 20, 30), Arrays.asList("performer Names"), "12 adress", 100, false, false, 100, 50.00, ticketedEvent);
     }
 
-
-    //Cancel() tests
     @Test
     @DisplayName("Testing correct value for Cancel when performance is not cancelled")
     void testCancelPerformanceNotCancelled() {
@@ -41,7 +38,6 @@ public class TestPerformance {
         assertTrue(PerformanceStatus.CANCELLED == performance.getStatus(), "Performance should still be cancelled");
     }
 
-    //checkIfEventIsTicketed() tests
     @Test
     @DisplayName("Testing correct value for checkIfEventIsTicketed when event is ticketed")
     void testCheckIfEventIsTicketedTrue() {
@@ -52,11 +48,10 @@ public class TestPerformance {
     @DisplayName("Testing correct value for checkIfEventIsTicketed when event is not ticketed")
     void testCheckIfEventIsTicketedFalse() {
         Event nonTicketedEvent = new Event(ep, 5678, "Non-Ticketed Event", EventType.MUSIC, false);
-        Performance nonTicketedPerformance = new Performance(456, LocalDateTime.now().plusDays(1),LocalDateTime.now().plusDays(2), List.of("performer Names"),"12 address", 100, false, false, 100, 50.00, nonTicketedEvent);
+        Performance nonTicketedPerformance = new Performance(456, LocalDateTime.now().plusDays(1), LocalDateTime.now().plusDays(2), Arrays.asList("performer Names"), "12 address", 100, false, false, 100, 50.00, nonTicketedEvent);
         assertFalse(nonTicketedPerformance.checkIfEventIsTicketed(), "Event should not be ticketed");
     }
 
-    //checkIfTicketsLeft() tests
     @Test
     @DisplayName("Testing correct value for checkIfTicketsLeft when tickets are available")
     void testCheckIfTicketsLeftTrue() {
@@ -69,7 +64,6 @@ public class TestPerformance {
         assertFalse(performance.checkIfTicketsLeft(150), "There should be no tickets left");
     }
 
-    //getOrganiserEmail() tests
     @Test
     @DisplayName("Testing correct value for getOrganiserEmail")
     void testGetOrganiserEmailIsEqual() {
@@ -82,7 +76,6 @@ public class TestPerformance {
         assertNotEquals(performance.getOrganizerEmail(), "ep2@test.com");
     }
 
-    //getEventTitle() tests
     @Test
     @DisplayName("Testing correct value for getEventTitle")
     void testGetEventTitleIsEqual() {
@@ -95,7 +88,6 @@ public class TestPerformance {
         assertNotEquals(performance.getEventTitle(), "Different Title");
     }
 
-    //checkHasNotHappenedYet() tests
     @Test
     @DisplayName("Testing correct value for checkHasNotHappenedYet when performance is in the future")
     void testCheckHasNotHappenedYetTrue() {
@@ -105,11 +97,10 @@ public class TestPerformance {
     @Test
     @DisplayName("Testing correct value for checkHasNotHappenedYet when performance is in the past")
     void testCheckHasNotHappenedYetFalse() {
-        Performance pastPerformance = new Performance(789, LocalDateTime.now().minusDays(2),LocalDateTime.now().minusDays(1), List.of("performer Names"),"12 address", 100, false, false, 100, 50.00, ticketedEvent);
+        Performance pastPerformance = new Performance(789, LocalDateTime.now().minusDays(2), LocalDateTime.now().minusDays(1), Arrays.asList("performer Names"), "12 address", 100, false, false, 100, 50.00, ticketedEvent);
         assertFalse(pastPerformance.checkHasNotHappenedYet(), "Performance should have happened already");
     }
 
-    //checkCreatedByEP() tests
     @Test
     @DisplayName("Testing correct value for checkCreatedByEP when performance is created by the given EP")
     void testCheckCreatedByEPTrue() {
@@ -122,12 +113,11 @@ public class TestPerformance {
         assertFalse(performance.checkCreatedByEP("ep123@test.com"), "Performance should not be created by the given EP");
     }
 
-    // hasActiveBookings() tests
     @Test
     @DisplayName("Testing correct value for hasActiveBookings when performance has active bookings")
     void testHasActiveBookingsTrue() {
         Student s = new Student("Name", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.ACTIVE, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
         performance.addBooking(b);
         assertTrue(performance.hasActiveBookings(), "Performance should have active bookings");
     }
@@ -136,7 +126,8 @@ public class TestPerformance {
     @DisplayName("Testing correct value for hasActiveBookings when performance cancelled by student")
     void testHasActiveBookingsFalseCancelledByStudent() {
         Student s = new Student("Name", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.CANCELLEDBYSTUDENT, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelByStudent();
         performance.addBooking(b);
         assertFalse(performance.hasActiveBookings(), "Performance should have no active bookings");
     }
@@ -145,7 +136,8 @@ public class TestPerformance {
     @DisplayName("Testing correct value for hasActiveBookings when performance cancelled by EP")
     void testHasActiveBookingsFalseCancelledByEP() {
         Student s = new Student("Name", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.CANCELLEDBYPROVIDER, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelByProvider();
         performance.addBooking(b);
         assertFalse(performance.hasActiveBookings(), "Performance should have no active bookings");
     }
@@ -154,17 +146,17 @@ public class TestPerformance {
     @DisplayName("Testing correct value for hasActiveBookings when performance payment failed")
     void testHasActiveBookingsFalsePaymentFailed() {
         Student s = new Student("Name", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.PAYMENTFAILED, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelPaymentFailed();
         performance.addBooking(b);
         assertFalse(performance.hasActiveBookings(), "Performance should have no active bookings"); 
     }
 
-    //getBookingDetailsForRefund() tests (I have tested individual asserts as that was requested in the handout and also handled all of the possible ENUM cases)
     @Test
     @DisplayName("Testing correct value for getBookingDetailsForRefund when performance has active bookings")
     void testGetBookingDetailsForRefundContainsEmail() {
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.ACTIVE, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
         performance.addBooking(b);
         String details = performance.getBookingDetailsForRefund();
         assertTrue(details.contains("student@email.com"), "should contain the email of the student that made the booking");
@@ -174,7 +166,7 @@ public class TestPerformance {
     @DisplayName("Testing correct value for getBookingDetailsForRefund when performance has active bookings")
     void testGetBookingDetailsForRefundContainsAmountPaid() {
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.ACTIVE, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
         performance.addBooking(b);
         String details = performance.getBookingDetailsForRefund();
         assertTrue(details.contains("50.0"), "should contain the amount paid for the booking");
@@ -184,7 +176,7 @@ public class TestPerformance {
     @DisplayName("Testing correct value for getBookingDetailsForRefund when performance has active bookings")
     void testGetBookingDetailsForRefundContainsNumTickets() {
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.ACTIVE, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
         performance.addBooking(b);
         String details = performance.getBookingDetailsForRefund();
         assertTrue(details.contains("1"), "should contain the number of tickets for the booking");
@@ -194,7 +186,8 @@ public class TestPerformance {
     @DisplayName("Testing correct value for getBookingDetailsForRefund when performance has no active bookings")
     void testGetBookingDetailsForRefundContainsNullWhenCancelledByProvider() {
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.CANCELLEDBYPROVIDER, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelByProvider();
         performance.addBooking(b);
         String details = performance.getBookingDetailsForRefund();
         assertEquals("", details, "should not contain any details when booking status is not active");
@@ -204,7 +197,8 @@ public class TestPerformance {
     @DisplayName("Testing correct value for getBookingDetailsForRefund when performance has no active bookings")
     void testGetBookingDetailsForRefundContainsNullWhenCancelledByStudent() {
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.CANCELLEDBYSTUDENT, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelByStudent();
         performance.addBooking(b);
         String details = performance.getBookingDetailsForRefund();
         assertEquals("", details, "should not contain any details when booking status is not active");
@@ -214,13 +208,13 @@ public class TestPerformance {
     @DisplayName("Testing correct value for getBookingDetailsForRefund when performance has no active bookings")
     void testGetBookingDetailsForRefundContainsNullWhenPaymentFailed() {
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.PAYMENTFAILED, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelPaymentFailed();
         performance.addBooking(b);
         String details = performance.getBookingDetailsForRefund();
         assertEquals("", details, "should not contain any details when booking status is not active");
     }
 
-    //Sponsor tests
     @Test
     @DisplayName("Testing correct value for isSponsored when there are sponsors")
     void testSponsorSetsIsSponsored() {
@@ -242,8 +236,6 @@ public class TestPerformance {
         assertEquals(40.0, performance.getFinalTicketPrice(), "Ticket price should be reduced to 40.0");
     }
 
-
-    //review() tests (Note again I have 2 tests to respect handout specifying one assert per test)
     @Test
     @DisplayName("Testing correct value for rating")
     void testCorrectRating(){
@@ -255,23 +247,18 @@ public class TestPerformance {
     @DisplayName("Testing correct value for review")
     void testCorrectReview(){
         performance.review(3, "test comment");
-        assertTrue(performance.getReviewComments().contains("test comment"), "Rating should be a 3");
+        assertTrue(performance.getReviewComments().contains("test comment"), "Review comment should be present");
     }
 
-
-    //addBooking() tests
-    
     @Test
     @DisplayName("Testing correct value for adding the booking")
     void testBookingadded(){
         Student s = new Student("student@email.com", "Password");
-        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), BookingStatus.PAYMENTFAILED, s, performance);
+        Booking b = new Booking(1, 1, 50.00, LocalDateTime.now(), s, performance);
+        b.cancelPaymentFailed();
         performance.addBooking(b);
         assertTrue(performance.getBookings().contains(b), "Booking should be added to the bookings");
     }
-
-
-    //toString() tests (Again note individual tests to stick to handouts request for individual asserts)
 
     @Test
     @DisplayName("Testing correct ID value for toString")
@@ -284,7 +271,7 @@ public class TestPerformance {
     @DisplayName("Testing correct year value for toString")
     void testCorrectStartYear(){
         String result = performance.toString();
-        assertTrue(result.contains("2026"), "should contain correct start year");
+        assertTrue(result.contains("26"), "should contain correct start year");
     }
 
     @Test
@@ -298,7 +285,7 @@ public class TestPerformance {
     @DisplayName("Testing correct hour value for toString")
     void testCorrectStartHour(){
         String result = performance.toString();
-        assertTrue(result.contains("16"), "should contain correct start hour");
+        assertTrue(result.contains("4"), "should contain correct start hour");
     }
 
     @Test
@@ -312,7 +299,7 @@ public class TestPerformance {
     @DisplayName("Testing correct year value for toString")
     void testCorrectEndYear(){
         String result = performance.toString();
-        assertTrue(result.contains("2026"), "should contain correct end year");
+        assertTrue(result.contains("26"), "should contain correct end year");
     }
 
     @Test
@@ -323,14 +310,14 @@ public class TestPerformance {
     }
 
     @Test
-    @DisplayName("Testing correct year value for toString")
+    @DisplayName("Testing correct hour value for toString")
     void testCorrectEndHour(){
         String result = performance.toString();
         assertTrue(result.contains("20"), "should contain correct end hour");
     }
 
     @Test
-    @DisplayName("Testing correct year value for toString")
+    @DisplayName("Testing correct minute value for toString")
     void testCorrectEndMinute(){
         String result = performance.toString();
         assertTrue(result.contains("30"), "should contain correct end minute");
@@ -343,7 +330,6 @@ public class TestPerformance {
         assertTrue(result.contains("performer Names"), "should contain correct performer names");
     }
 
-    
     @Test
     @DisplayName("Testing correct venue adress value for toString")
     void testCorrectAdress(){
@@ -351,14 +337,12 @@ public class TestPerformance {
         assertTrue(result.contains("12 adress"), "should contain correct adress");
     }
 
-    
     @Test
     @DisplayName("Testing correct capacity value for toString")
     void testCorrectCapacity(){
         String result = performance.toString();
         assertTrue(result.contains("100"), "should contain correct capacity");
     }
-
 
     @Test
     @DisplayName("Testing correct is outdoors value for toString")
@@ -387,7 +371,4 @@ public class TestPerformance {
         String result = performance.toString();
         assertTrue(result.contains("50"), "should contain correct ticket price");
     }
-
 }
-
-
